My files update

--- a/styles.css
+++ b/styles.css
@@ -163,3 +163,271 @@ p {
 .bannerimg {
   width: 100%;
 }
+
+.menu {
+  position: relative;
+}
+
+.menu-image {
+  position: absolute;
+  left: 0;
+}
+
+.menu-swipe {
+  position: relative;
+  margin-top: 50px;
+}
+
+.menu-swipe h2 {
+  display: flex;
+  float: right;
+}
+
+.menu-img {
+  width: 100%;
+}
+
+@media screen and (max-width: 780px) {
+  .menu-img {
+    width: 80%;
+  }
+}
+
+.menu_swipe .container h1 {
+  margin-top: 200px;
+}
+
+.container .dishes {
+  margin-top: 80px;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide.brand {
+  margin-top: 80px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-slide h4 {
+  float: left;
+  margin-top: 8px;
+}
+
+.swiper-slide h5 {
+  display: flex;
+  float: right;
+  margin-top: 8px;
+  color: #73777b;
+}
+
+.card {
+  width: 13em;
+  height: 16em;
+  background-color: #fffaed;
+  border-radius: 2em;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  padding: 2em 1em;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card h2 {
+  margin-top: 30px;
+}
+
+.card:hover {
+  background-color: black;
+  color: #fffaed;
+}
+
+.card img {
+  width: 4em;
+  height: 4em;
+  color: #fffaed;
+  background-color: white;
+  border-radius: 100%;
+}
+
+.card:hover img {
+  background-color: #fffaed;
+}
+
+.card__image {
+  width: 6em;
+  height: 6em;
+  border: 20px solid white;
+  border-radius: 50%;
+  padding: 3px;
+  margin-bottom: 2em;
+}
+
+.card__image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.card img :hover {
+  color: white;
+}
+
+.card__content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.card__title {
+  font-size: 1.5rem;
+  font-weight: 500;
+  position: relative;
+  top: 0.2em;
+}
+
+.card__btn {
+  background-color: black;
+  color: #fff;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  border: none;
+  padding: 0.5em;
+  border-radius: 0.5em;
+  margin-top: 0.5em;
+  cursor: pointer;
+}
+
+.dishes {
+  margin-top: 40px;
+  position: relative;
+}
+
+.dishes h2 {
+  float: right;
+  margin-bottom: 4px;
+}
+
+.dishes h1 {
+  margin-bottom: 30px;
+}
+
+.dishes .card {
+  width: 40em;
+  height: 16em;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.dishes .card img {
+  object-fit: cover;
+}
+
+.dishes .card:hover {
+  background-color: black;
+  color: #fffaed;
+}
+
+.dishes .card img {
+  width: 20em;
+  height: 16em;
+  background-color: none;
+  border-radius: none;
+}
+
+.dishes card:hover img {
+  background: none;
+}
+
+.brand {
+  margin-top: 150px;
+  position: relative;
+}
+
+.brand h2 {
+  float: right;
+  z-index: 8;
+}
+
+.popular-dish {
+  z-index: 8;
+}
+
+.brand-image {
+  position: absolute;
+  right: 0;
+}
+
+.brand-img {
+  width: 100%;
+}
+
+@media screen and (max-width: 780px) {
+  .brand-img {
+    width: 80%;
+  }
+}
+
+.App.container {
+  margin-bottom: 30px;
+  margin-top: 160px;
+}
+
+.App.row {
+  padding: 5%;
+  padding-top: 0.1%;
+  border: 1px solid;
+  background: #fffaed;
+  border-radius: 50px;
+}
+
+.App.banner-text {
+  margin-top: 60px;
+}
+
+.App-image img {
+  margin-top: 60px;
+  left: 0;
+  display: flex;
+  float: left;
+}
+
+.App.banner-text h1 p {
+  margin-top: 30px;
+}
