--- a/styles.css
+++ b/styles.css
@@ -615,6 +615,7 @@ p {
 
 .foot.col-sm-3.col-xs-12 h4 {
   font-size: 20px;
+  margin-left: 28px;
   margin-bottom: 30px;
   font-weight: 500;
   position: relative;
